2002-03-13  wakaba <w@suika.fam.cx>

	* Address.pm: New module.
	
	* ChangeLog: New file.